Write service tests